# airsafe-school

./: .env.example  .gitignore  DATA_ACQUISITION_FINAL.md  DATA_ACQUISITION_GUIDE.txt  DAY1_COMPLETION_REPORT.md  DAY1_REPORT.md  README.md  SUMMARY.md  TRACKER_UPDATE_SUMMARY.txt  geocode_schools.py  pyproject.toml  rebuild_coverage_map.py  rebuild_map_3categories.py  requirements.txt  update_gate.py  update_tracker.py
azure-functions/: fetch_training_weather.py  function_app.py  host.json  local.settings.json  requirements.txt
data/: lokasi_stasiun.html  losocv_summary.json  residual_corrector_metrics.json  udara_page.html
docs/: PROJECT_BRIEF.md  day3-6-plan.md
models/: final_lgbm_h12.pkl  final_lgbm_h24.pkl  final_lgbm_h6.pkl  hourly_residual_corrector.pkl  station_stats_lookup.json
notebooks/: Scraper.ipynb  demo-final-predictions.ipynb  modelling-ablation.ipynb  modelling-baseline.ipynb  modelling-compare.ipynb  modelling-optimize.ipynb  modelling-shap.ipynb  prepo-eda.ipynb  prepo-modelling-data.ipynb  shap-waterfall--prompt.ipynb
prompts/: airsafe_recommendation_system.txt  airsafe_recommendation_user.txt
scripts/: collect_spku_snapshot.py  compute_school_features.py  download_schools.py  eda_04_health_correlation.py  eda_health_correlation.py  fetch_training_weather.py  geocode_schools.py  run_hourly_kriging.py  run_lag_kriging.py  test_recommendation_templates.py  upload_to_blob.py
src/: __init__.py  config.py  exceptions.py
tests/: test_blob_client.py  test_bmkg_client.py  test_config.py  test_helpers.py  test_hourly_kriging.py  test_kriging.py  (+8 more)
(+43 files in other folders)
