[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airsafe-school"
version = "0.2.0"
description = "Air quality monitoring and analysis system for schools in DKI Jakarta"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AirSafe Team"},
]
dependencies = [
    "requests>=2.28",
    "pandas>=2.0",
    "numpy>=1.24",
    "folium>=0.14",
]

[project.optional-dependencies]
azure = [
    "azure-functions",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
